fix: dark mode on os darkmode

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -187,6 +187,9 @@ body {
   .gatsby-resp-image-image {
     box-shadow: none !important;
   }
+  kbd {
+    background: var(--main-bgd-color) !important;
+  }
 }
 
 ::selection,
